paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_qualif_2/sample_003/target.compile.log
error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_qualif_2/sample_003/target.rs:20:16
   |
14 | fn main() {
   |          - expected `()` because of default return type
...
20 |         return 1;
   |                ^ expected `()`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.